syntax = "proto3";
package rook.matchmaker.v1beta1;

option go_package = "github.com/cmwaters/rook/x/matchmaker/types";

import "gogoproto/gogo.proto";

message MsgFindGame {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string game = 3; 
  string options = 4; 
}

